--- a/index.html
+++ b/index.html
@@ -1,23 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-<h1>questo è il titolo</h1>
-<h2> mela 
-     <h3> finestra sei bellissimo
 
-     </h3> pennarello 
-     <h4> ilaria+finestra nicole+banana andrea+mela</h4>
-     <h5>ila andrex nikuz
-        himage.png
-        <img src="anila.jpg" alt="">
-     </h5>
-</h2>
+<body>
+    <header>
+        <h1>Galleria d'arte</h1>
+        <h1>anilamente</h1>
+        <nav>
+            <a href="index.html">home</a>
+            <a href="opere.html">opere</a>
+        </nav>
+    </header>
+    <main>
+        <h2>biografia degli artisti</h2>
+        <div>
+            <h3>nicole balzer</h3>
+            <img width="300" src="nicole.jpg" alt="">
+            <p>nicole è una ragazza bionda con gli occhi chiari dall'età di 14 anni nata a genova il 04 agosto 2010. Il
+                suo cognome ha un'origine di nazionalità tedesca per via dell'origine del papà nato in gerermania</p>
+                <a href="https://it.shein.com/?url_from=itgooglebrandshein_srsa_Shein01_20221011&cid=18574996796&setid=142667963735&adid=627514075398&kwd=kwd-1667706624&pf=GOOGLE&gad_source=1&gclid=CjwKCAiAxKy5BhBbEiwAYiW---rIdLK_fKB2gCp3ZuXnCj2OqAD7lLI8wZMeTn6-7Yt5fLB2C9BxsBoCRAQQAvD_BwE">shein</a>
+        </div>
+        <div>
+            <h3>andrea raina</h3>
+            <img width="300" src="andrea.jpg" alt="">
+            <p>andrea èuna ragazza di 13 anni è nata il 30 marzo 2011 e ha i capelli rossi e gli occhi marrone scuro. Tifa
+                sampdoria e pratica nuoto sincronizzato. è piu o meno alta </p>
+                <a href="https://it.wikipedia.org/wiki/Tony_Boy_(rapper)">tony boy</a>
+        </div>
+        <h3>ilaria giordano</h3>
+        <img width="300" src="ilaria2.jpg" alt="">
+        <p>Ilaria è una ragazza bassa nata a genova, mora e con gli occhi scuri.Ilaria tifa genoa ed è molto ossessionata dal cantante tedua, ilaria ha origini del sud italia ma è nata a genova al gaslini, ha una sorella maggiore e due animali domestici, un cane e una coniglietta</p>
+        <a href="https://www.pianetagenoa1893.net/tag/gradinata-nord/">gradinata nord</a>
+    </main>
+    <footer>
+        <p>copyright anila 2024</p>
+    </footer>
 </body>
+
 </html>
- 
++
