--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,26 +10,26 @@
 </head>
 
 <body>
-    <header>
+    <header class="rosso">
         <h1>Galleria d'arte</h1>
         <h1>anilamente</h1>
         <nav>
-            <a href="index.html">home</a>
-            <a href="opere.html">opere</a>
+            <a class="link-navigazione" href="index.html">home</a>
+            <a class="link-navigazione" href="opere.html">opere</a>
         </nav>
     </header>
-    <main>
+    <main class="anila">
         <h2>biografia degli artisti</h2>
         <div>
             <h3>nicole balzer</h3>
-            <img width="300" src="nicole.jpg" alt="">
+            <img class="immagine" width="300" src="nicole.jpg" alt="">
             <p>nicole è una ragazza bionda con gli occhi chiari dall'età di 14 anni nata a genova il 04 agosto 2010. Il
                 suo cognome ha un'origine di nazionalità tedesca per via dell'origine del papà nato in gerermania</p>
                 <a href="https://it.shein.com/?url_from=itgooglebrandshein_srsa_Shein01_20221011&cid=18574996796&setid=142667963735&adid=627514075398&kwd=kwd-1667706624&pf=GOOGLE&gad_source=1&gclid=CjwKCAiAxKy5BhBbEiwAYiW---rIdLK_fKB2gCp3ZuXnCj2OqAD7lLI8wZMeTn6-7Yt5fLB2C9BxsBoCRAQQAvD_BwE">shein</a>
         </div>
         <div>
             <h3>andrea raina</h3>
-            <img width="300" src="andrea.jpg" alt="">
+            <img class="immagine3"width="300" src="andrea.jpg" alt="">
             <p>andrea èuna ragazza di 13 anni è nata il 30 marzo 2011 e ha i capelli rossi e gli occhi marrone scuro. Tifa
                 sampdoria e pratica nuoto sincronizzato. è piu o meno alta </p>
                 <a href="https://it.wikipedia.org/wiki/Tony_Boy_(rapper)">tony boy</a>
