--- a/opere.html
+++ b/opere.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -15,6 +16,7 @@
 </nav>
     </header>
     <main>
+        <canvas width="500" height="500" class="foglio"></canvas>
 
     </main>
     <footer>
