--- a/opere.html
+++ b/opere.html
@@ -16,11 +16,11 @@
 </nav>
     </header>
     <main>
-        <canvas width="500" height="500" class="foglio"></canvas>
-
+        <canvas id="foglio" width="500" height="500" class="foglio"></canvas>
     </main>
     <footer>
 
     </footer>
 </body>
+<script src="programma.js"></script>
 </html>
