--- a/opere.html
+++ b/opere.html
@@ -17,6 +17,9 @@
     </header>
     <main>
         <canvas id="foglio" width="500" height="500" class="foglio"></canvas>
+        <canvas id="foglio2" width="500" height="500" class="foglio"></canvas>
+
+
     </main>
     <footer>
 
