--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
         <div>
             <h3>nicole balzer</h3>
             <img class="immagine" width="300" src="nicole.jpg" alt="">
-            <p>nicole è una ragazza bionda con gli occhi chiari dall'età di 14 anni nata a genova il 04 agosto 2010. Il
-                suo cognome ha un'origine di nazionalità tedesca per via dell'origine del papà nato in gerermania</p>
+            <p>Nicole è una ragazza bionda con gli occhi chiari dall'età di 14 anni nata a genova il 04 agosto 2010. pratica lo sport di danza, e le piace molto viaggiare. </p>
+             .</p>
                 <a href="https://it.shein.com/?url_from=itgooglebrandshein_srsa_Shein01_20221011&cid=18574996796&setid=142667963735&adid=627514075398&kwd=kwd-1667706624&pf=GOOGLE&gad_source=1&gclid=CjwKCAiAxKy5BhBbEiwAYiW---rIdLK_fKB2gCp3ZuXnCj2OqAD7lLI8wZMeTn6-7Yt5fLB2C9BxsBoCRAQQAvD_BwE">shein</a>
         </div>
         <div>
             <h3>andrea raina</h3>
             <img class="immagine3"width="300" src="andrea.jpg" alt="">
-            <p>andrea èuna ragazza di 13 anni è nata il 30 marzo 2011 e ha i capelli rossi e gli occhi marrone scuro. Tifa
-                sampdoria e pratica nuoto sincronizzato. è piu o meno alta </p>
+            <p>Andrea è una ragazza di 13 anni è nata il 30 marzo 2011 e ha i capelli rossi e gli occhi marrone scuro. Tifa
+                sampdoria e pratica nuoto sincronizzato. </p>
                 <a href="https://it.wikipedia.org/wiki/Tony_Boy_(rapper)">tony boy</a>
         </div>
         <h3>ilaria giordano</h3>
